# mcp-server-and-client-configuration

./: README.md  client.py  main.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
