[project]
name = "mcp-server-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
